--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="text-center" style="font-size: 81px;">Layout course HTML/CSS </h1>
+                    <h1 class="text-center" style="font-size: 80px;">Layout course HTML/CSS </h1>
                     <div class="itd_play" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         <div class="itd_triangle"></div>
                     </div>
@@ -31,7 +31,7 @@
 
 
 
-    <!-- модальное окно, вслывающее при нажатии на кнопку play -->
+    <!-- модальное окно, вслывающее при нажатии кнопки play -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -76,7 +76,7 @@
 
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-center mb-5 color1" style="font-size: 60px;">About our course</h2>
+                    <h2 class="text-center mb-5 color1" style="font-size: 61px;">About our course</h2>
                 </div>
             </div>
 
